--- a/src/pages/identification/identification.html
+++ b/src/pages/identification/identification.html
@@ -7,12 +7,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>identification</ion-title>
+    <ion-title>Enter Identifier</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-label color="primary">ID NUMBER</ion-label>
+  <ion-input placeholder="Text Input" [(ngModel)]="idNumber"></ion-input>
+  <button ion-button (click)="createRecord($event)">Create New Record</button>
 </ion-content>
