--- a/src/pages/body-form/body-form.html
+++ b/src/pages/body-form/body-form.html
@@ -14,5 +14,15 @@
 
 
 <ion-content padding>
-
+  <form [formGroup]="bodyForm" (ngSubmit)="logForm()">
+    <ion-item>
+      <ion-label>Todo</ion-label>
+      <ion-input type="text" formControlName="title"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Description</ion-label>
+      <ion-textarea formControlName="description"></ion-textarea>
+    </ion-item>
+    <button ion-button type="submit" [disabled]="!bodyForm.valid">Submit</button>
+  </form>
 </ion-content>
