--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,38 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Manage Records</ion-title>
   </ion-navbar>
 </ion-header>
+<!--<ion-content padding>-->
+  <!--<ion-row>-->
+    <!--<ion-col></ion-col>-->
+    <!--<ion-col text-center>-->
+    <!--</ion-col>-->
+    <!--<ion-col></ion-col>-->
+  <!--</ion-row>-->
+  <!--<div>-->
+    <!--<ion-row>-->
+      <!--<ion-col text-center>-->
+        <!--<button ion-button full type="submit" (click)="scanCode($event)">Scan QR Code</button>-->
+        <!--<p>or</p>-->
+        <!--<ion-input type="text" placeholder="Identification Number" name="identification" required [(ngModel)]="idNumber"></ion-input>-->
+      <!--</ion-col>-->
+    <!--</ion-row>-->
+    <!--<ion-row>-->
+      <!--<ion-col text-center>-->
+        <!--<button ion-button full type="submit" (click)="newRecord($event)">Create New Record</button>-->
+      <!--</ion-col>-->
+    <!--</ion-row>-->
+  <!--</div>-->
+<!--</ion-content>-->
 
-<ion-content padding>
-  <button ion-button (click)="newRecord($event)">New Record</button>
+<ion-content text-center class="vertical-align-content">
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <h1 text-uppercase no-padding no-margin>Wellcome</h1>
+        <h3 no-padding no-margin>Username</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
