--- a/src/pages/identification/identification.html
+++ b/src/pages/identification/identification.html
@@ -1,20 +1,22 @@
-<!--
-  Generated template for the IdentificationPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Enter Identifier</ion-title>
+    <ion-title>Manage Records</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
-<ion-content padding>
-  <ion-label color="primary">ID NUMBER</ion-label>
-  <ion-input placeholder="Text Input" [(ngModel)]="idNumber"></ion-input>
-  <button ion-button (click)="createRecord($event)">Create New Record</button>
+<ion-content text-center class="vertical-align-content">
+  <ion-grid>
+    <ion-row>
+      <ion-col text-center>
+        <ion-item>
+          <ion-input type="text" placeholder="Enter Identification Number" name="identification" required [(ngModel)]="idNumber"></ion-input>
+          <button item-right ion-button type="submit" (click)="scanCode($event)">Scan QR Code</button>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <button ion-button full type="submit" (click)="createRecord($event)">Create New Record</button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
